--- a/src/components/screens/ScreenCategories/ScreenNiño/ScreenNiño.module.css
+++ b/src/components/screens/ScreenCategories/ScreenNiño/ScreenNiño.module.css
@@ -1,4 +1,4 @@
-.screenWomen {
+.screenKids {
   min-height: 100vh;
   position: relative;
   background: #f8fafd;
@@ -12,8 +12,7 @@
   z-index: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=1200&q=80');
-  /* Imagen mujer de fondo, puedes cambiar la url si lo deseas */
+  background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
